Fixed content spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 html,
-body,
-main {
+body {
   height: 100%;
   background-color: #e8edf1;
 }
